Fix message overflow

--- a/src/styles/messages.scss
+++ b/src/styles/messages.scss
@@ -25,7 +25,6 @@
 	gap: 12px;
 	flex-grow: 1;
 	width: 100%;
-	overflow: hidden;
 	border: 2px solid transparent;
 
 	&__status {
